<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.ChatScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/supp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mayaText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/abeezee"
                android:padding="2dp"
                android:text="@string/pdptext"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/abeezee"
                android:padding="2dp"
                android:text="@string/online"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:onClick="menu"
            android:padding="5dp"
            android:src="@drawable/sharp_more_vert_24" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:onClick="call"
            android:src="@drawable/call" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lin"
                android:layout_width="280dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/flagBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@color/white"
                    android:src="@drawable/uzb" />

                <EditText
                    android:id="@+id/et_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0.8"
                    android:background="@color/white"
                    android:fontFamily="@font/abeezee"
                    android:gravity="bottom"
                    android:editable="false"
                    android:hint="@string/enter_text"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/textcolor"
                    android:textSize="17sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="35dp"
                    android:background="@color/textcolor" />


            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/btnVoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:onClick="voice"
                    android:layout_gravity="center"
                    android:padding="11dp"
                    android:src="@drawable/ic_voice" />

                <ImageButton
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginEnd="4dp"
                    android:background="@color/white"
                    android:padding="11dp"
                    android:src="@drawable/ic_send" />

            </FrameLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>




